--- a/StyleSheet/main.css
+++ b/StyleSheet/main.css
@@ -1,8 +1,8 @@
 /*--------------Colors-----------*/
 /*--------------Fonts-----------*/
 @import "https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700&family=Nunito+Sans:opsz,wght@6..12,200;6..12,300;6..12,400;6..12,500;6..12,600;6..12,700;6..12,800;6..12,900&family=Poppins:wght@200;300;400;500;600;700;800&family=Ubuntu:wght@300;400;500;700&display=swap";
-.add-task .input-group .todo-input,
-.add-task .input-group .todo-category {
+.input-group .todo-input,
+.input-group .todo-category {
   display: block;
   width: 100%;
   border: 1px solid #ccc;
@@ -18,42 +18,112 @@
   list-style: none;
   outline: none;
   text-decoration: none;
-  font-family: "Inter", sans-serif;
-}
-
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  overflow-wrap: break-word;
 }
 
 ::-webkit-scrollbar {
   width: 0;
 }
 
-/* ------------Google-Fonts----------- */
 body {
   min-height: 100vh;
-  color: #2e2e2e;
   background-color: hsl(0, 0%, 96%);
+  font-family: "Inter", sans-serif;
+  color: #2e2e2e;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.wrapper {
-  position: relative;
-  display: flex;
-  overflow: hidden;
-  height: 100vh;
+.add-task {
+  position: absolute;
+  bottom: -100%;
+  left: 0;
   width: 100%;
-  padding: 30px 0;
+  padding: 50px 30px;
+  transition: all 0.3s;
 }
-.wrapper .backdrop-screen {
+.add-task .add-task-backdrop {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%);
+  width: 135%;
+  height: 21rem;
+  border-radius: 50% 50% 0 0;
+  background-color: #fff;
+}
+.add-task.active {
+  bottom: -30px;
+}
+.add-task .head {
+  font-size: 1.5rem;
+  margin-bottom: 20px;
+  position: relative;
+  z-index: 10;
+}
+
+.add-task-btn {
+  position: absolute;
+  width: 3rem;
+  height: 3rem;
+  bottom: 1rem;
+  right: 1rem;
+  border-radius: 50%;
+  background-color: #b92b27;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.3s;
+}
+.add-task-btn:hover {
+  transform: scale(1.1);
+}
+.add-task-btn svg {
+  width: 2.3rem;
+  color: #fff;
+}
+.add-task-btn.active {
+  transform: rotate(45deg);
+  bottom: 20rem;
+  z-index: 1;
+}
+
+.category-screen .head-top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.category-screen .head-top .back-btn {
+  cursor: pointer;
+  width: 2rem;
+  color: #fff;
+}
+.category-screen .head-top .top-logo {
+  width: 35px;
+  height: 35px;
+}
+.category-screen .head-top .top-logo img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+.category-screen .category-details {
+  padding: 0 30px;
+  margin-top: 8rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.category-screen .category-details img {
+  width: 4rem;
+}
+.category-screen .category-details .details p {
+  opacity: 0.6;
+}
+
+.backdrop-screen {
   width: 135%;
   height: 25rem;
   background: #1565c0;
@@ -65,6 +135,69 @@ body {
   transform: translate(-50%);
   z-index: -1;
   transition: all 0.3s;
+}
+
+.black-backdrop {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translate(0);
+  opacity: 0;
+  visibility: hidden;
+  width: 100%;
+  height: 100%;
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+  background-color: rgba(0, 0, 0, 0.137254902);
+}
+.black-backdrop.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.btns {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 1rem;
+}
+.btns button {
+  padding: 10px 20px;
+  border-radius: 5px;
+  border: none;
+  font-size: 14px;
+  font-weight: 600;
+  cursor: pointer;
+  z-index: 1;
+}
+.btns button.add-btn {
+  background-color: #1565c0;
+  color: #fff;
+}
+.btns button.cancel-btn {
+  background-color: #b92b27;
+  color: #fff;
+}
+
+.input-group {
+  position: relative;
+  margin-bottom: 20px;
+}
+.input-group label {
+  display: block;
+  width: 100%;
+  font-size: 15px;
+  padding: 6px;
+  color: #666;
+}
+
+.wrapper {
+  position: relative;
+  display: flex;
+  overflow: hidden;
+  height: 100vh;
+  width: 100%;
+  padding: 30px 0;
 }
 .wrapper .screen {
   flex: 1;
@@ -197,40 +330,6 @@ body {
   opacity: 0.6;
 }
 
-.category-screen .head-top {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.category-screen .head-top .back-btn {
-  cursor: pointer;
-  width: 2rem;
-  color: #fff;
-}
-.category-screen .head-top .top-logo {
-  width: 35px;
-  height: 35px;
-}
-.category-screen .head-top .top-logo img {
-  -o-object-fit: cover;
-     object-fit: cover;
-  width: 100%;
-  height: 100%;
-}
-.category-screen .category-details {
-  padding: 0 30px;
-  margin-top: 8rem;
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-}
-.category-screen .category-details img {
-  width: 4rem;
-}
-.category-screen .category-details .details p {
-  opacity: 0.6;
-}
-
 .tasks-wrapper {
   padding: 0 30px;
   margin-top: 1rem;
@@ -323,113 +422,6 @@ body {
   transition: all 0.2s ease;
 }
 .tasks-wrapper .tasks .task-wrapper .task:hover .checkmark svg {
-  opacity: 1;
-  visibility: visible;
-}
-
-.add-task-btn {
-  position: absolute;
-  width: 3rem;
-  height: 3rem;
-  bottom: 1rem;
-  right: 1rem;
-  border-radius: 50%;
-  background-color: #b92b27;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: all 0.3s;
-}
-.add-task-btn:hover {
-  transform: scale(1.1);
-}
-.add-task-btn svg {
-  width: 2.3rem;
-  color: #fff;
-}
-.add-task-btn.active {
-  transform: rotate(45deg);
-  bottom: 20rem;
-  z-index: 1;
-}
-
-.add-task {
-  position: absolute;
-  bottom: -100%;
-  left: 0;
-  width: 100%;
-  padding: 50px 30px;
-  transition: all 0.3s;
-}
-.add-task .add-task-backdrop {
-  position: absolute;
-  top: 0;
-  left: 50%;
-  transform: translate(-50%);
-  width: 135%;
-  height: 21rem;
-  border-radius: 50% 50% 0 0;
-  background-color: #fff;
-}
-.add-task.active {
-  bottom: -30px;
-}
-.add-task .head {
-  font-size: 1.5rem;
-  margin-bottom: 20px;
-  position: relative;
-  z-index: 10;
-}
-.add-task .input-group {
-  position: relative;
-  margin-bottom: 20px;
-}
-.add-task .input-group label {
-  display: block;
-  width: 100%;
-  font-size: 15px;
-  padding: 6px;
-  color: #666;
-}
-.add-task .btns {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  gap: 1rem;
-}
-.add-task .btns button {
-  padding: 10px 20px;
-  border-radius: 5px;
-  border: none;
-  font-size: 14px;
-  font-weight: 600;
-  cursor: pointer;
-  z-index: 1;
-}
-.add-task .btns button.add-btn {
-  background-color: #1565c0;
-  color: #fff;
-}
-.add-task .btns button.cancel-btn {
-  background-color: #b92b27;
-  color: #fff;
-}
-
-.black-backdrop {
-  position: absolute;
-  top: 0;
-  left: 0;
-  transform: translate(0);
-  opacity: 0;
-  visibility: hidden;
-  width: 100%;
-  height: 100%;
-  -webkit-backdrop-filter: blur(5px);
-          backdrop-filter: blur(5px);
-  background-color: rgba(0, 0, 0, 0.137254902);
-}
-.black-backdrop.active {
   opacity: 1;
   visibility: visible;
 }
