code refactoring and doing some changes

--- a/StyleSheet/main.css
+++ b/StyleSheet/main.css
@@ -34,6 +34,30 @@ body {
   justify-content: center;
 }
 
+.wrapper {
+  position: relative;
+  display: flex;
+  overflow: hidden;
+  height: 100vh;
+  width: 100%;
+  padding: 30px 0;
+}
+@media only screen and (min-width: 768px) {
+  .wrapper {
+    height: 50rem;
+    width: 25rem;
+    border-radius: 35px;
+    border: 10px solid #2e2e2e;
+  }
+}
+.wrapper.show-category .home-screen,
+.wrapper.show-category .category-screen {
+  transform: translateX(-100%);
+}
+.wrapper.show-category .backdrop-screen {
+  transform: translate(-50%, -60%);
+}
+
 .add-task {
   position: absolute;
   bottom: -100%;
@@ -155,6 +179,131 @@ body {
   visibility: visible;
 }
 
+.screen {
+  flex: 1;
+  min-width: 100%;
+  transition: all 0.3s;
+}
+.screen .head-wrapper {
+  padding: 0px 30px;
+}
+.screen .head-wrapper .head-top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.screen .head-wrapper .head-top .menu-btn {
+  cursor: pointer;
+  width: 2rem;
+  color: #fff;
+}
+.screen .head-wrapper .head-top .top-logo {
+  width: 35px;
+  height: 35px;
+}
+.screen .head-wrapper .head-top .top-logo img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+.screen .head-wrapper .welcome {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 30px;
+}
+.screen .head-wrapper .content {
+  color: #fff;
+}
+.screen .head-wrapper .content-head {
+  font-size: 1.5rem;
+}
+.screen .head-wrapper .content-text {
+  font-weight: 500;
+  line-height: 20px;
+}
+.screen .head-wrapper .user-img {
+  position: relative;
+}
+.screen .head-wrapper .user-img img {
+  width: 5rem;
+}
+.screen .head-wrapper .user-img .backdrop {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%);
+  width: 3.8rem;
+  height: 4rem;
+  border-radius: 50%;
+  background-color: #fff;
+  z-index: -1;
+}
+
+.category {
+  background-color: #fff;
+  border-radius: 0.5rem;
+  padding: 1.5rem;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  transition: all 0.3s;
+}
+.category .left {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1.5rem;
+}
+.category .left .content h1 {
+  font-size: 1.5rem;
+}
+.category .left .content p {
+  color: #2e2e2e;
+  font-size: 0.8rem;
+  opacity: 0.6;
+}
+.category .left .category-img {
+  width: 3rem;
+}
+.category .options {
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s ease;
+}
+.category .options .toggle-btn {
+  width: 2rem;
+  cursor: pointer;
+  opacity: 0.6;
+}
+.category .options:hover .options {
+  opacity: 1;
+  visibility: visible;
+}
+.category:hover {
+  transform: translateY(-6px);
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.categories-wrapper {
+  margin-top: 1rem;
+  height: calc(100% - 8rem);
+  padding: 0 30px;
+  padding-bottom: 20px;
+  overflow: scroll;
+}
+.categories-wrapper .categories {
+  padding-top: 1rem;
+  display: flex;
+  align-items: initial;
+  justify-content: space-between;
+  flex-direction: column;
+  gap: 1rem;
+}
+
 .btns {
   display: flex;
   align-items: center;
@@ -189,145 +338,6 @@ body {
   font-size: 15px;
   padding: 6px;
   color: #666;
-}
-
-.wrapper {
-  position: relative;
-  display: flex;
-  overflow: hidden;
-  height: 100vh;
-  width: 100%;
-  padding: 30px 0;
-}
-.wrapper .screen {
-  flex: 1;
-  min-width: 100%;
-  transition: all 0.3s;
-}
-.wrapper .screen .head-wrapper {
-  padding: 0px 30px;
-}
-.wrapper .screen .head-wrapper .head-top {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.wrapper .screen .head-wrapper .head-top .menu-btn {
-  cursor: pointer;
-  width: 2rem;
-  color: #fff;
-}
-.wrapper .screen .head-wrapper .head-top .top-logo {
-  width: 35px;
-  height: 35px;
-}
-.wrapper .screen .head-wrapper .head-top .top-logo img {
-  -o-object-fit: cover;
-     object-fit: cover;
-  width: 100%;
-  height: 100%;
-}
-.wrapper .screen .head-wrapper .welcome {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-top: 30px;
-}
-.wrapper .screen .head-wrapper .content {
-  color: #fff;
-}
-.wrapper .screen .head-wrapper .content-head {
-  font-size: 1.5rem;
-}
-.wrapper .screen .head-wrapper .content-text {
-  font-weight: 500;
-  line-height: 20px;
-}
-.wrapper .screen .head-wrapper .user-img {
-  position: relative;
-}
-.wrapper .screen .head-wrapper .user-img img {
-  width: 5rem;
-}
-.wrapper .screen .head-wrapper .user-img .backdrop {
-  position: absolute;
-  top: 0;
-  left: 50%;
-  transform: translate(-50%);
-  width: 3.8rem;
-  height: 4rem;
-  border-radius: 50%;
-  background-color: #fff;
-  z-index: -1;
-}
-.wrapper.show-category .home-screen,
-.wrapper.show-category .category-screen {
-  transform: translateX(-100%);
-}
-.wrapper.show-category .backdrop-screen {
-  transform: translate(-50%, -60%);
-}
-
-.categories-wrapper {
-  margin-top: 1rem;
-  height: calc(100% - 8rem);
-  padding: 0 30px;
-  padding-bottom: 20px;
-  overflow: scroll;
-}
-.categories-wrapper .categories {
-  padding-top: 1rem;
-  display: flex;
-  align-items: initial;
-  justify-content: space-between;
-  flex-direction: column;
-  gap: 1rem;
-}
-.categories-wrapper .categories .category {
-  background-color: #fff;
-  border-radius: 0.5rem;
-  padding: 1.5rem;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  transition: all 0.3s;
-}
-.categories-wrapper .categories .category .left {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 1.5rem;
-}
-.categories-wrapper .categories .category .left img {
-  width: 3rem;
-}
-.categories-wrapper .categories .category .options {
-  opacity: 0;
-  visibility: hidden;
-  transition: all 0.3s ease;
-}
-.categories-wrapper .categories .category .options .toggle-btn {
-  width: 2rem;
-  cursor: pointer;
-  opacity: 0.6;
-}
-.categories-wrapper .categories .category .options:hover .options {
-  opacity: 1;
-  visibility: visible;
-}
-.categories-wrapper .categories .category:hover {
-  transform: translateY(-6px);
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-}
-.categories-wrapper .categories .content h1 {
-  font-size: 1.5rem;
-}
-.categories-wrapper .categories .content p {
-  color: #2e2e2e;
-  font-size: 0.8rem;
-  opacity: 0.6;
 }
 
 .tasks-wrapper {
@@ -424,13 +434,4 @@ body {
 .tasks-wrapper .tasks .task-wrapper .task:hover .checkmark svg {
   opacity: 1;
   visibility: visible;
-}
-
-@media (min-width: 768px) {
-  .wrapper {
-    height: 50rem;
-    width: 25rem;
-    border-radius: 35px;
-    border: 10px solid #2e2e2e;
-  }
 }/*# sourceMappingURL=main.css.map */
