--- a/scss/layout/__layout-dir.scss
+++ b/scss/layout/__layout-dir.scss
@@ -1,5 +1,9 @@
+@import "./app-wrapper";
 @import "./addTask-form";
 @import "./addTask-button";
 @import "./category-screen";
 @import "./backdrop";
 @import "./black-backdrop";
+@import "./screen";
+@import "./category";
+@import "./categories-wrapper";
