--- a/scss/layout/_screen.scss
+++ b/scss/layout/_screen.scss
@@ -22,6 +22,7 @@
             &-text {
                 font-weight: 500;
                 line-height: 20px;
+                margin-top: 5px;
             }
         }
 
