--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,4 +3,12 @@
 @import "../scss/layout/_layout-dir";
 @import "../scss/components/_components-dir";
 
-@import "https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700&family=Nunito+Sans:opsz,wght@6..12,200;6..12,300;6..12,400;6..12,500;6..12,600;6..12,700;6..12,800;6..12,900&family=Poppins:wght@200;300;400;500;600;700;800&family=Ubuntu:wght@300;400;500;700&display=swap";
+.error-message {
+    color: $color_6;
+    font-size: 12px;
+    font-weight: 600;
+}
+
+.error-border {
+    border: 1px solid $color_6 !important;
+}
