--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -1,3 +1,5 @@
+@import "https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700&family=Nunito+Sans:opsz,wght@6..12,200;6..12,300;6..12,400;6..12,500;6..12,600;6..12,700;6..12,800;6..12,900&family=Poppins:wght@200;300;400;500;600;700;800&family=Ubuntu:wght@300;400;500;700&display=swap";
+
 * {
     padding: 0px;
     margin: 0px;
@@ -14,8 +16,6 @@
 body {
     min-height: $height-size_1;
     background-color: $color_5;
-    // background: #ffd89b;  
-    // background: linear-gradient(to right, #19547b, #ffd89b); 
     font-family: $font-family_1;
     color: $color_1;
     @include flex-box(center, center);
