formValidation has changed and validateInputs designed for validation , setError,setSuccess functions created for adding validation messages

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -7,6 +7,7 @@ $color_4: #666;
 $color_5: hsl(0, 0%, 96%);
 $color_6: #b92b27;
 $color_7: #1565c0;
+$color_8: #084C41;
 $background-color_1: rgba(0, 0, 0, 0.055);
 $background-color_2: rgba(0, 0, 0, 0.1);
 $background-color_3: #00000023;
