--- a/assets/StyleSheet/main.css
+++ b/assets/StyleSheet/main.css
@@ -34,10 +34,6 @@ body {
   justify-content: center;
 }
 
-.error {
-  border: 1px solid #c51605 !important;
-}
-
 .wrapper {
   position: relative;
   display: flex;
@@ -445,12 +441,12 @@ body {
   opacity: 0.6;
 }
 
-.error-message {
+.input-group .error-message {
   color: #b92b27;
   font-size: 12px;
   font-weight: 600;
 }
 
-.error-border {
-  border: 1px solid #b92b27 !important;
+.input-group.error-border input {
+  border: 1px solid #b92b27;
 }
