--- a/assets/Scss/layout/__layout-dir.scss
+++ b/assets/Scss/layout/__layout-dir.scss
@@ -1,10 +1,10 @@
 @import "./app-wrapper";
 @import "./addTask-form";
+@import "./home-screen";
 @import "./category-screen";
+@import "./category-card";
+@import "./categories-wrapper";
 @import "./backdrop";
 @import "./black-backdrop";
-@import "./screen";
-@import "./category";
-@import "./categories-wrapper";
 @import "./task-wrapper";
 @import "./tasks-wrapper";
