--- a/assets/Scss/layout/_app-wrapper.scss
+++ b/assets/Scss/layout/_app-wrapper.scss
@@ -5,12 +5,13 @@
     height: $height-size_1;
     width: $width-size_1;
     padding: 30px 0;
+    margin: 20px 0;
 
     @media only screen and (min-width: 567px) {
-        height: 50rem;
-        width: 25rem;
+        height: 41rem;
+        width: 24rem;
         border-radius: 35px;
-        border: 10px solid $color_1;
+        border: 8px solid $color_1;
     }
 
     &.show-category {
