--- a/assets/Scss/layout/_tasks-wrapper.scss
+++ b/assets/Scss/layout/_tasks-wrapper.scss
@@ -1,4 +1,5 @@
 .tasks-wrapper {
+    position: relative;
     padding: 0 30px;
     margin-top: 1rem;
     height: calc(100% - 12rem);
@@ -7,7 +8,7 @@
 
     .tasks {
         padding-top: 1rem;
-        @include flex-direction(center, 0, flex-direction, column);
+        @include flex-direction(center, initial, flex-direction, column);
         gap: 1rem;
 
         .no-task {
@@ -19,5 +20,12 @@
         }
 
     }
+
+    .completed-tasks {
+        position: absolute;
+        left: 35px;
+        bottom: 55px;
+    }
+
 
 }
